--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,17 @@
+# Core dependencies
 fastapi>=0.95.0
 uvicorn>=0.21.1
 numpy>=1.22.0
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.5
 python-dotenv>=1.0.0
+pydantic-settings>=2.0.0
+pandas>=2.0.0
+
+# Development dependencies
+pytest>=7.0.0
+pytest-cov>=4.0.0
+black>=23.0.0
+isort>=5.12.0
+ruff>=0.1.0
+hatchling>=1.18.0
