--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ pydantic>=2.0.0
 pydantic-settings>=2.0.0
 pandas>=2.0.0
 scikit-learn>=1.2.0
+alembic>=1.15.0
 
 # Development dependencies
 pytest>=7.0.0
